# ij-scons-tools

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml
.github/workflows/: pylint_v2.yml
examples/consumer/: SConstruct  libijc.pc
src/ij_scons_tools/: __init__.py  __init__.pyi
src/ij_scons_tools/site_tools/: __init__.py  configvars.py  installvars.py  pkg_config.py  pkg_config_gen.py
tests/: test_package_metadata.py  test_pkg_config.py
