[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ij-scons-tools"
version = "0.1.0"
description = "Example pip-distributed SCons site_tools package."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Israel Jacquez" }
]
keywords = ["scons", "site-tools", "build"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed"
]
dependencies = [
  "SCons>=4.10"
]

[project.optional-dependencies]
dev = [
  "black>=26.0",
  "build>=1.2",
  "mypy>=1.18",
  "pyflakes>=3.4",
  "pytest>=8.0"
]
test = [
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://example.invalid/ij-scons-tools"
Repository = "https://example.invalid/ij-scons-tools.git"
Issues = "https://example.invalid/ij-scons-tools/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ij_scons_tools = ["__init__.pyi", "py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\\.pyi?$'

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
mypy_path = "src"
warn_unused_configs = true
